--- a/resp_cab.css
+++ b/resp_cab.css
@@ -42,7 +42,11 @@
 
 /*iPads (landscape)*/
 @media screen and (max-height: 768px){
-	
+                                		
+				header{font-size: 3em;float:left; width:100%;}
+				section{font-size: 3em;}				
+				nav button{font-size: 1em;}
+				nav{font-size: 2em;}
 }
 
 /*LG*/
@@ -68,7 +72,10 @@
 
 /*Galaxy Note*/
 @media screen and (max-height: 640px){
-	
+				header{font-size: 2em;float:left; width:100%;}
+				section{font-size: 1em;}				
+				nav button{font-size: 1em;}
+				nav{font-size: 1em;}
 }
 
 /*Nexus 7*/
@@ -113,10 +120,10 @@
 
 /*Tablet 360*/
 @media screen and (max-height: 360px){
-			header{font-size: 1em;}
-				section{font-size: 5em;}				
-				nav button{font-size: 23em;}
-				nav{font-size: 2em;}	
+			header{font-size: 2em;}
+			section{font-size: 1em;}				
+			nav button{font-size: 1em;}
+			nav{font-size: 1em;}	
 }
 
 /*iPhone 5, 4 landscape*/
